--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/jpeg" href="/src/assets/img/logo1.png" />
+    <link rel="icon" type="image/jpeg" href="/src/assets/img/ab.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Plataforma de Documentación</title>
   </head>
